Minor fix (Mobile double-clicking no longer should zoom in (If Stack Overflow is to be believed))

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4,6 +4,7 @@ html {
   height: 100%;
   scrollbar-color: grey transparent;
   font-size: 62.5%;
+  touch-action: pan-x pan-y;
 }
 
 ::-webkit-scrollbar {
